ZDKSampleCode/src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>The billing frequency of the subscription.</description>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Picklist_Field__c</fullName>
        <description>Custom Picklist Field</description>
        <inlineHelpText>Custom Picklist Field.</inlineHelpText>
        <label>Custom Picklist Field</label>
        <picklist>
            <picklistValues>
                <fullName>Option 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Text_Field__c</fullName>
        <description>Custom Text Field.</description>
        <label>Custom Text Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Emerging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium-sized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>